infrastructure/argocd/image-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-image-updater
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-image-updater
    spec:
      serviceAccountName: argocd-image-updater
      containers:
        - name: image-updater
          image: quay.io/argoprojlabs/argocd-image-updater:v0.12.2
          volumeMounts:
            - mountPath: /app/config
              name: registries-conf
      volumes:
        - name: registries-conf
          configMap:
            name: argocd-image-updater-config
            items:
              - key: registries.conf
                path: registries.conf
